Revision history for Perl extension CljPerl.

0.01  Mon Apr 22 11:25:10 2013
	- first version; baisc implementation.
0.02  Sat Apr 27 12:53:00 2013
	- test fix and doc update.
0.03  Sun Apr 28 15:58:00 2013
	- change key/index accessor syntax.
	- and 'let' and 'syntax' special form.
0.04  Sun Apr 28 19:45:00 2013
	- Add sigils support for perl function prototype.
0.05  Wed May 01 19:33:00 2013
	- Change sigils syntax to use meta data.
	- Add REPL.
	- Add sender macro dispatcher.
	- Add native XML form.
	- Add regexp match form.
0.06  Sat May 04 02:24:00 2013
	- quoi web framework.
0.07  Mon May 06 10:42:00 2013
	- Add bin/cljp into Makefile.PL.
	- Some bug fixes.
0.08  Mon May 06 12:28:00 2013 
	- Add perlobj-type and object-id. 
0.09  Mon May 06 14:33:00 2013
	- Refine error report.
	- Set key of map with nil to delete key. 
0.10  TBD
	- Add exception throw/catch.
	- Add cond