@@ -5,7 +5,7 @@ use ExtUtils::MakeMaker;
 WriteMakefile(
     NAME              => 'CljPerl',
     VERSION_FROM      => 'lib/CljPerl.pm', # finds $VERSION
-    PREREQ_PM         => {}, # e.g., Module::Name => 1.1
+    PREREQ_PM         => {'Coro' => 6.31},
     EXE_FILES         => [ 'bin/cljp' ],
     ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
       (ABSTRACT_FROM  => 'lib/CljPerl.pm', # retrieve abstract from module
