@@ -1,4 +1,4 @@
-CljPerl version 0.09 
+CljPerl version 0.10 
 ====================
 
 The README is used to introduce the module and provide instructions on
