@@ -6,7 +6,7 @@ package CljPerl::Atom;
   use CljPerl::Printer;
   use CljPerl::Logger;
 
-  our $VERSION = '0.09';
+  our $VERSION = '0.10';
   our $id = 0;
   
   sub new {
