@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 
-our $VERSION = '0.09';
+our $VERSION = '0.10';
 
 use AnyEvent::Socket;
 use AnyEvent::Handle;
