@@ -3,7 +3,7 @@ package CljPerl::Var;
   use strict;
   use warnings;
 
-  our $VERSION = '0.09';
+  our $VERSION = '0.10';
 
   sub new {
     my $class = shift;
