@@ -227,3 +227,17 @@
   [else (println "b")])
 
 (println (env "PATH"))
+
+(def c0 (coroutine
+  (println "a")
+  (coro-sleep)
+  (println (coro-current))
+  (println (coro-main))
+  (println "d")))
+
+(println "b")
+(coro-resume c0)
+(println "c")
+(println (coro-current))
+(coro-resume c0)
+
